--- a/advisory-board.html
+++ b/advisory-board.html
@@ -79,6 +79,7 @@
       <h1><u>Advisory Board</u></h1>
     </div>
     
+    <!-- Advisory Board Modules -->
     <main>
       <div class="row">
         <div class="col-lg-4">
