--- a/advisory-board.html
+++ b/advisory-board.html
@@ -87,7 +87,7 @@
             <h4>J.L. Martinez</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board.jpg" alt="Martinez">
+            <img src="images/advisory-board.jpg" alt="Martinez" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>Chairman of the Board</p>
@@ -103,7 +103,7 @@
             <h4>Ben Amaba, PhD</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-ben.jpg" alt="Amaba">
+            <img src="images/advisory-board-ben.jpg" alt="Amaba" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>PE, CPIM®, LEED® AP, Worldwide Executive</p>
@@ -119,7 +119,7 @@
             <h4>Brian Yablonski</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-brian.jpg" alt="Yablonski">
+            <img src="images/advisory-board-brian.jpg" alt="Yablonski" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>External Affairs Director, Gulf Power Company</p>
@@ -137,7 +137,7 @@
             <h4>Byron A. Knibbs</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-byron.jpg" alt="Knibbs">
+            <img src="images/advisory-board-byron.jpg" alt="Knibbs" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>Vice President, Orlando Utilities Commission</p>
@@ -153,7 +153,7 @@
             <h4>Christopher Fountas</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-christopher.jpg" alt="Fountas">
+            <img src="images/advisory-board-christopher.jpg" alt="Fountas" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>Partner, Arsenal Venture Partners</p>
@@ -169,7 +169,7 @@
             <h4>Dan Holladay</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-dan.jpg" alt="Holladay">
+            <img src="images/advisory-board-dan.jpg" alt="Holladay" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>Executive Director, UCF Office of Research & Commercialization</p>
@@ -187,7 +187,7 @@
             <h4>Gustavo R. Cepero</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-gustavo.jpg" alt="Cepero">
+            <img src="images/advisory-board-gustavo.jpg" alt="Cepero" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>Vice President, Florida Crystals Corporation</p>
@@ -203,7 +203,7 @@
             <h4>Jennifer Grove</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-jennifer.jpg" alt="Grove">
+            <img src="images/advisory-board-jennifer.jpg" alt="Grove" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>Community Development Manager, Gulf Power Company</p>
@@ -219,7 +219,7 @@
             <h4>Jeremy L. Susac</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-jeremy.jpg" alt="Susac">
+            <img src="images/advisory-board-jeremy.jpg" alt="Susac" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>Vice President, Government Affairs, Lennar Ventures</p>
@@ -237,7 +237,7 @@
             <h4>Nick Gladding</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-nick.jpg" alt="Gladding">
+            <img src="images/advisory-board-nick.jpg" alt="Gladding" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>Attorney at Law, PA</p>
@@ -253,7 +253,7 @@
             <h4>Paul Zombe P.E.</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-paul.jpg" alt="Zombe">
+            <img src="images/advisory-board-paul.jpg" alt="Zombe" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>Service Technology Owner</p>
@@ -269,7 +269,7 @@
             <h4>Richard Paul-Hus</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-richard.jpg" alt="Paul-Hus">
+            <img src="images/advisory-board-richard.jpg" alt="Paul-Hus" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>Owner – Hypower, Fort Lauderdale, FL</p>
@@ -287,7 +287,7 @@
             <h4>Roy Periana</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-roy.png" alt="Perina">
+            <img src="images/advisory-board-roy.png" alt="Perina" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>Scripps Energy Laboratories, The Scripps Research Institute</p>
@@ -303,7 +303,7 @@
             <h4>Thomas L. Hernandez</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-thomas.png" alt="Hernandez">
+            <img src="images/advisory-board-thomas.png" alt="Hernandez" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>Business Strategy and Renewables, Tampa Electric Company</p>
@@ -319,7 +319,7 @@
             <h4>Timothy L. Bryant</h4>
           </div>
           <div class="row d-flex justify-content-center">
-            <img src="images/advisory-board-timothy.png" alt="Bryant">
+            <img src="images/advisory-board-timothy.png" alt="Bryant" class="ad-board">
           </div>
           <div class="row d-flex justify-content-center">
             <p>PE, Senior Manager External Affairs, NextEra Energy, Inc.</p>
