--- a/advisory-board.html
+++ b/advisory-board.html
@@ -66,7 +66,7 @@
                   <a class="dropdown-item" href="#">FAQ</a>
                   <a class="dropdown-item" href="#">Educational Programs</a>
                   <a class="dropdown-item" href="#">Community Outreach Programs</a>
-                  <a class="dropdown-item" href="#">Research Facilities</a>
+                  <a class="dropdown-item" href="../website-proposal/data.html">Research and Data</a>
                 </div>
               </li>
             </ul>
